rocketchat/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "rocketchat" # Same namespace as the deployment
  name: "rocketchat-ingress" # Name of the ingress (see kubectl get ingress -A)
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - "rocketchat.onprem.toastedbuns.co.uk" # Host to access rocketchat
    secretName: "rocketchat-prod-tls" # Name of the certifciate (see kubectl get certificate -A)
  rules:
  - host: "rocketchat.onprem.toastedbuns.co.uk" # Host to access rocketchat
    http:
      paths:
        - path: /  # We will access rocketchat via the URL https://rocketchat.<domain.com>/
          backend:
            serviceName: "rocketchat-rocketchat" # Mapping to the service (see kubectl get services -n rocketchat)
            servicePort: 80 # Mapping to the port (see kubectl get services -n rocketchat)
